--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -8,10 +8,7 @@
     </head>
 
     <body>
-        <div class="top">
-       
-        </div>
-        <img class="my" src="photo-1507238691740-187a5b1d37b8.jpeg" ></a>
-        
+        <div class="top-box"></div>
+
     </body>
 </html>
