--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -10,5 +10,13 @@
     <body>
         <div class="top-box"></div>
 
+        <div class="mid">
+            <div class="qoute-box"></div>
+            <div class="potrait"></div>
+            <div class="cert"></div>
+        </div>
+
+        <div class="bottom">
+            <div class="abt-me"></div>
     </body>
 </html>
