--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -14,9 +14,7 @@
             <div class="qoute-box"></div>
             <div class="potrait"></div>
             <div class="cert"></div>
-        </div>
-
-        <div class="bottom">
-            <div class="abt-me"></div>
+            </div>
+            <!-- <div class="abt-me"></div></div> -->
     </body>
 </html>
