--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     <body>
         <div class="top-box">
             <div class="afeef">AFEEF<b>AHMED</b></div>
+            <div class="three">
+                <div class="projects">PROJECTS</div>
+                <div class="about">ABOUT</div>
+                <div class="cnt">CONTACT</div>
+            </div>
             <!-- <div class="ahmed">AHMED</div> -->
         </div>
 
         <div class="mid">
-            <div class="qoute-box">
-            </div>
+            <div class="qoute-box"></div>
             <div class="potrait"></div>
             <div class="cert"></div>
             <div class="abt-me"></div>
