--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>website</title>
         <link rel="stylesheet" href="Untitled-1.css">
         <!-- <script src=".js"></script> -->
+
+
         
     </head>
 
@@ -19,7 +21,11 @@
         </div>
 
         <div class="mid">
-            <div class="qoute-box"></div>
+            <div class="qoute-box">
+            <div class="flwr-pht">
+                <img src="FLOWER ICON.png" alt="flwr">
+            </div>
+            </div>
             <div class="potrait"></div>
             <div class="cert"></div>
             <div class="abt-me"></div>
