--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
 
         <div class="mid">
             <div class="qoute-box">
+                
             <div class="flwr-pht">
                 <img src="FLOWER ICON.png" alt="flwr">
+            </div>
+            <div class="txt1">
+                <p><b>Artist Redefining</b> Architecture <b>with AI-Driven Design</b></p>
             </div>
             </div>
             <div class="potrait"></div>
