--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
             </div>
             </div>
             <div class="potrait"></div>
-            <div class="cert"></div>
+            <div class="cert">
+                <div class="topc">Certificates </div>
+                <div class="imgc"><img src="certp.jpg" alt="cld"></div>
+                <div class="google"></div>
+                <dic class="hackr"></dic>
+                <div class="more"></div>
+            </div>
             <div class="abt-me"></div>
             <div class="self"></div>
             <div class="contact"></div>
