--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </div>
             <div class="potrait"></div>
             <div class="cert">
-                <div class="topc">Certificates </div>
-                <div class="imgc"><img src="certp.jpg" alt="cld"></div>
+                <div class="topc">Certificates</div>
+                <div class="imgc"><img id="imagecertificate" src="certp.jpg" alt="cld"></div>
                 <div class="google"></div>
                 <dic class="hackr"></dic>
                 <div class="more"></div>
