--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>afeef.project</title>
 <html>
     <head>
         <title>website</title>
@@ -32,14 +33,23 @@
             </div>
             <div class="potrait"></div>
             <div class="cert">
-                <div class="topc">Certificates</div>
+                <div class="topc">Certificates<p id="arrw">↗</p></div> 
+                
                 <div class="imgc"><img id="imagecertificate" src="certp.jpg" alt="cld"></div>
-                <div class="google"></div>
-                <dic class="hackr"></dic>
-                <div class="more"></div>
+                <div class="allc">
+                <div class="g1"></div>
+                <div class="google">Google</div>
+                <div class="g2"></div>
+                <div class="hackr">HackerRank</div>
+                <div class="g3"></div>
+                <div class="more">Show More</div>
+                </div>
             </div>
             <div class="abt-me"></div>
-            <div class="self"></div>
+            <div class="self">
+                <div class="txt2"><b>Have Some Questions?</b> <p id="str">↗</p></div>
+                <div class="cnt-me">Contact Me</div>
+            </div>
             <div class="contact"></div>
         </div>
     </body>
