--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="potrait"></div>
             <div class="cert">
-                <div class="topc">Certificates<p id="arrw">↗</p></div> 
+                <a class="topc" href="cerrtificates.html">Certificates<p id="arrw">↗</p></a> 
                 
                 <div class="imgc"><img id="imagecertificate" src="certp.jpg" alt="cld"></div>
                 <div class="allc">
@@ -47,10 +47,15 @@
             </div>
             <div class="abt-me"></div>
             <div class="self">
-                <div class="txt2"><b>Have Some Questions?</b> <p id="str">↗</p></div>
+                <div class="txt2"><b>Have Some Questions?</b><p id="str">↗</p></div>
                 <div class="cnt-me">Contact Me</div>
             </div>
-            <div class="contact"></div>
+            <div class="contact">
+                <div class="int">INSTAGRAM</div>
+                <!-- <img id="int-logo" src="int-logo.png"> -->
+                <div class="git">GITHUB</div>
+                <div class="lin">LINKDIN<div>
+            </div>
         </div>
     </body>
 </html>
