--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <div class="cnt-me">Contact Me</div>
             </div>
             <div class="contact">
-                <div class="int">INSTAGRAM</div>
+                <a class="int" href="https://www.instagram.com/ssd_afeef_/">INSTAGRAM</a>
                 <!-- <img id="int-logo" src="int-logo.png"> -->
-                <div class="git">GITHUB</div>
-                <div class="lin">LINKDIN<div>
+                <a class="git" href="https://github.com/ssdafeef">GITHUB</a>
+                <a class="lind" href="https://www.linkedin.com/in/afeef-ahmed-856660286/">LINKDIN<a>
             </div>
         </div>
     </body>
