--- a/cerrtificates.html
+++ b/cerrtificates.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>THis is the certificates page</h1>
+        <h1>This site is still under construction</h1>
         
         <script src="" async defer></script>
     </body>
