--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <head>
         <title>website</title>
         <link rel="stylesheet" href="Untitled-1.css">
-        <!-- <script src=".js"></script> -->
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Oil Spill Cursor Animation</title>
 
         
     </head>
 
     <body>
+        <script src="Untitled-12.js"></script>
         <div class="top-box">
             <div class="afeef">AFEEF<b>AHMED</b></div>
             <div class="three">
@@ -33,7 +35,8 @@
             </div>
             <div class="potrait"></div>
             <div class="cert">
-                <a class="topc" href="cerrtificates.html">Certificates<p id="arrw">↗</p></a> 
+                <a href="cerrtificates.html" style="text-decoration: none;color: inherit;cursor:auto;">
+                <div class="topc" >Certificates<p id="arrw">↗</div> 
                 
                 <div class="imgc"><img id="imagecertificate" src="certp.jpg" alt="cld"></div>
                 <div class="allc">
@@ -42,8 +45,8 @@
                 <div class="g2"></div>
                 <div class="hackr">HackerRank</div>
                 <div class="g3"></div>
-                <div class="more">Show More</div>
-                </div>
+                <div class="more">Microsoft</div>
+                </div></a>
             </div>
             <div class="abt-me"></div>
             <div class="self">
