--- a/cerrtificates.html
+++ b/cerrtificates.html
@@ -3,14 +3,74 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>afeef.certificates</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="certificates(css).css">
     </head>
     <body>
-        <h1>This site is still under construction</h1>
+        <h1 class="tt">This site is still under construction</h1>
         
         <script src="" async defer></script>
+        <div class="container">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+<div class="square">
+<div class="square black">
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
     </body>
 </html>
