--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                 <div class="more">Microsoft</div>
                 </div></a>
             </div>
-            <div class="abt-me"></div>
+            <div class="abt-me">
+                <div class="tops"><p id="star">✵</p></div>
+            </div>
             <div class="self">
                 <div class="txt2"><b>Have Some Questions?</b><p id="str">↗</p></div>
                 <div class="cnt-me">Contact Me</div>
@@ -60,5 +62,7 @@
                 <a class="lind" href="https://www.linkedin.com/in/afeef-ahmed-856660286/">LINKDIN<a>
             </div>
         </div>
+        <script src="" async defer></script>
+        
     </body>
 </html>
