--- a/cerrtificates.html
+++ b/cerrtificates.html
@@ -1,76 +1,52 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>afeef.certificates</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="certificates(css).css">
-    </head>
-    <body>
-        <h1 class="tt">This site is still under construction</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="certificates(css).css">
+</head>
+<body>
+        <div class="slider">
+            <div class="item">
+              <img style="width: 100%; height:350px;border-radius: 10px;"  src="2.png">
+            </div>
+            <div class="item">
+                <img style="width: 100%;height:320px;border-radius: 10px;" src="1.png">
+            </div>
+            <div class="item">
+                <img style="width: 100%;height: 300px" src="4.png">
+
+                            </div>
+            <div class="item ">
+                <h1>Slide 1 </h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas ipsa similique magni adipisci accusamus consectetur fuga facilis doloremque dignissimos incidunt, reiciendis molestias dolore pariatur illum enim ipsum nostrum ab blanditiis? Voluptas, nostrum facere. Distinctio saepe facilis cumque! Voluptate, cumque.
+            </div>
+            <div class="item ">
+                <h1>Slide 1</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas ipsa similique magni adipisci accusamus consectetur fuga facilis doloremque dignissimos incidunt, reiciendis molestias dolore pariatur illum enim ipsum nostrum ab blanditiis? Voluptas, nostrum facere. Distinctio saepe facilis cumque! Voluptate, cumque.
+            </div>
+            <div class="item ">
+                <h1>Slide 1</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas ipsa similique magni adipisci accusamus consectetur fuga facilis doloremque dignissimos incidunt, reiciendis molestias dolore pariatur illum enim ipsum nostrum ab blanditiis? Voluptas, nostrum facere. Distinctio saepe facilis cumque! Voluptate, cumque.
+            </div>
+            <div class="item ">
+                <h1>Slide 1</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas ipsa similique magni adipisci accusamus consectetur fuga facilis doloremque dignissimos incidunt, reiciendis molestias dolore pariatur illum enim ipsum nostrum ab blanditiis? Voluptas, nostrum facere. Distinctio saepe facilis cumque! Voluptate, cumque.
+            </div>
+            <div class="item ">
+                <h1>Slide 1</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas ipsa similique magni adipisci accusamus consectetur fuga facilis doloremque dignissimos incidunt, reiciendis molestias dolore pariatur illum enim ipsum nostrum ab blanditiis? Voluptas, nostrum facere. Distinctio saepe facilis cumque! Voluptate, cumque.
+            </div>
+            <div class="item ">
+                <h1>Slide 1</h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas ipsa similique magni adipisci accusamus consectetur fuga facilis doloremque dignissimos incidunt, reiciendis molestias dolore pariatur illum enim ipsum nostrum ab blanditiis? Voluptas, nostrum facere. Distinctio saepe facilis cumque! Voluptate, cumque.
+            </div>
+            <button id="next">></button>
+            <button id="prev"><</button>
+        </div>
         
-        <script src="" async defer></script>
-        <div class="container">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-<div class="square">
-<div class="square black">
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+        <script src="certificates(js).js"></script>
     </body>
 </html>
