--- a/cerrtificates.html
+++ b/cerrtificates.html
@@ -9,42 +9,36 @@
 </head>
 <body>
         <div class="slider">
-            <div class="item">
-              <img style="width: 100%; height:350px;border-radius: 10px;"  src="2.png">
+            <div class="item" style="height: 366px;width: 300px;margin-left: 80px;">
+              <img style="width: 100%; height:366px;border-radius: 10px;"  src="2.png">
             </div>
-            <div class="item">
+            <div class="item" style="width: 450px;">
                 <img style="width: 100%;height:320px;border-radius: 10px;" src="1.png">
             </div>
-            <div class="item">
-                <img style="width: 100%;height: 300px" src="4.png">
+            <div class="item"style="width: 450px;">
+                <img style="width: 100%;height: 300px;border-radius: 10px;" src="3.png">
 
                             </div>
-            <div class="item ">
-                <h1>Slide 1 </h1>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas ipsa similique magni adipisci accusamus consectetur fuga facilis doloremque dignissimos incidunt, reiciendis molestias dolore pariatur illum enim ipsum nostrum ab blanditiis? Voluptas, nostrum facere. Distinctio saepe facilis cumque! Voluptate, cumque.
+            <div class="item " style="width: 450px;">
+                <img style="width: 99%;height: 300px;border-radius: 10px;" src="4.png">  
+              </div>
+            <div class="item " style="width: 450px;">
+                <img style="width: 100%;height: 320px;border-radius: 10px;" src="5.png">         
+               </div>
+            <div class="item "style="width: 450px;">
+                <img style="width: 100%;height: 320px;border-radius: 10px;" src="6.png">            
             </div>
-            <div class="item ">
-                <h1>Slide 1</h1>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas ipsa similique magni adipisci accusamus consectetur fuga facilis doloremque dignissimos incidunt, reiciendis molestias dolore pariatur illum enim ipsum nostrum ab blanditiis? Voluptas, nostrum facere. Distinctio saepe facilis cumque! Voluptate, cumque.
+            <div class="item" style="display: flex;justify-content: center;background-color: rgba(58, 58, 58, 0.951);">
+                <h1>Coming soon... </h1>
             </div>
-            <div class="item ">
-                <h1>Slide 1</h1>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas ipsa similique magni adipisci accusamus consectetur fuga facilis doloremque dignissimos incidunt, reiciendis molestias dolore pariatur illum enim ipsum nostrum ab blanditiis? Voluptas, nostrum facere. Distinctio saepe facilis cumque! Voluptate, cumque.
+            <div class="item "style="display: flex;justify-content: center;background-color: rgba(58, 58, 58, 0.951);">
+                <h1>Comming soon...</h1>
             </div>
-            <div class="item ">
-                <h1>Slide 1</h1>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas ipsa similique magni adipisci accusamus consectetur fuga facilis doloremque dignissimos incidunt, reiciendis molestias dolore pariatur illum enim ipsum nostrum ab blanditiis? Voluptas, nostrum facere. Distinctio saepe facilis cumque! Voluptate, cumque.
-            </div>
-            <div class="item ">
-                <h1>Slide 1</h1>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas ipsa similique magni adipisci accusamus consectetur fuga facilis doloremque dignissimos incidunt, reiciendis molestias dolore pariatur illum enim ipsum nostrum ab blanditiis? Voluptas, nostrum facere. Distinctio saepe facilis cumque! Voluptate, cumque.
-            </div>
-            <div class="item ">
-                <h1>Slide 1</h1>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptas ipsa similique magni adipisci accusamus consectetur fuga facilis doloremque dignissimos incidunt, reiciendis molestias dolore pariatur illum enim ipsum nostrum ab blanditiis? Voluptas, nostrum facere. Distinctio saepe facilis cumque! Voluptate, cumque.
-            </div>
-            <button id="next">></button>
-            <button id="prev"><</button>
+            <div class="item "style="display: flex;justify-content: center;background-color: rgba(58, 58, 58, 0.951);">
+                <h1>Coming soon...</h1>
+                </div>
+            <button id="next">⫸</button>
+            <button id="prev">⫷</button>
         </div>
         
         <script src="certificates(js).js"></script>
