--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <div class="move">SHAIK</div>
             <div class="three">
                 <div class="projects">PROJECTS</div>
+                <a class="about" href="about(html).html">
                 <div class="about">ABOUT</div>
+            </a>
                 <div class="cnt">CONTACT</div>
             </div>
             <!-- <div class="ahmed">AHMED</div> -->
@@ -51,7 +53,12 @@
                 </div></a></a>
             </div>
             <div class="abt-me">
-                <div class="tops"><p id="star">✵</p></div>
+                <div class="tops">
+                    <p id="star">✵</p></div>
+                    <!-- <div class="explain">
+                        I am Afeef , currently studying Computer Science And Engineering at SRM IST Trichy, 
+                        with a strong interest in web development. I've worked on Personal Projects, 
+                        gaining practical experience in Web development.</div> -->
             </div>
             <div class="self">
                 <div class="txt2"><b>Have Some Questions?</b><p id="str">↗</p></div>
