top size increased

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
   
-        <link rel="stylesheet" href="tempc.css">
+        <link rel="stylesheet" href="Untitled-1.css">
         <script src="Untitled-12.js"></script>
         
     </head>
@@ -10,7 +10,7 @@
         <div class="whole">
             <div class="navt">
                 <div class="afeef">AFEEF<b>AHMED</b></div>
-                <!-- <div class="move">SHAIK</div> -->
+                <div class="move">SHAIK</div>
                 <div class="three">
                     <div class="projects">PROJECTS</div>
                     <a class="about" href="about(html).html">
