--- a/temp.html
+++ b/temp.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
   
@@ -10,7 +10,7 @@
         <div class="whole">
             <div class="navt">
                 <div class="afeef">AFEEF<b>AHMED</b></div>
-                <!-- <div class="move">SHAIK</div> -->
+                <div class="move">SHAIK</div>
                 <div class="three">
                     <div class="projects">PROJECTS</div>
                     <a class="about" href="about(html).html">
@@ -50,10 +50,10 @@
             <div id="content3">
                     <div class="tops">
                         <p id="star">✵</p></div>
-                        <!-- <div class="explain">
+                        <div class="explain">
                             I am Afeef , currently studying Computer Science And Engineering at SRM IST Trichy, 
                             with a strong interest in web development. I've worked on Personal Projects, 
-                            gaining practical experience in Web development.</div> -->
+                            gaining practical experience in Web development.</div>
                 </div>
             <div id="content4">
                 <div class="txt2"><b>Have Some Questions?</b><p id="str">↗</p></div>
@@ -61,11 +61,11 @@
             </div>
             <footer>  <div class="contact"></div>
                 <a class="int" href="https://www.instagram.com/ssd_afeef_/">INSTAGRAM</a>
-                <!-- <img id="int-logo" src="int-logo.png"> -->
+                <img id="int-logo" src="int-logo.png">
                 <a class="git" href="https://github.com/ssdafeef">GITHUB</a>
                 <a class="lind" href="https://www.linkedin.com/in/afeef-ahmed-856660286/">LINKDIN<a>
             </div></footer>
           </div>
         
 
-</html>
+</html> -->
