--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <div class="navt">
                 <div class="afeef">AFEEF<b>AHMED</b></div>
                 <div class="move">SHAIK</div>
+                <div class="nlyscr">AFEEF<b>AHMED</b>SHAIK</div>
                 <div class="three">
                     <div class="projects">PROJECTS</div>
                     <a class="about" href="about(html).html">
@@ -51,7 +52,7 @@
                     <div class="tops">
                         <p id="star">✵</p></div>
                         <!-- <div class="explain">
-                            I am Afeef , currently studying Computer Science And Engineering at SRM IST Trichy, 
+                            I am Afeef , currently studying Computer Science And Engineering, 
                             with a strong interest in web development. I've worked on Personal Projects, 
                             gaining practical experience in Web development.</div> -->
                 </div>
@@ -63,7 +64,7 @@
                 <a class="int" href="https://www.instagram.com/ssd_afeef_/">INSTAGRAM</a>
                 <!-- <img id="int-logo" src="int-logo.png"> -->
                 <a class="git" href="https://github.com/ssdafeef">GITHUB</a>
-                <a class="lind" href="https://www.linkedin.com/in/afeef-ahmed-856660286/">LINKDIN<a>
+                <a class="lind" href="https://www.linkedin.com/in/afeef-ahmed-856660286/">LINKEDIN<a>
             </div></footer>
           </div>
         
