--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
                 <div class="move">SHAIK</div>
                 <div class="nlyscr">AFEEF<b>AHMED</b>SHAIK</div>
                 <div class="three">
-                    <div class="projects">PROJECTS</div>
+
+                    <a class="projects" style="text-decoration: inherit; color: black;" href="about(html).html">
+                    <div class="projects" >PROJECTS</div></a>     
+
                     <a class="about" href="about(html).html">
-                    <div class="about">ABOUT</div></a>
+                    <div class="about" >ABOUT</div></a>
+
                     <div class="cnt">CONTACT</div>
                 </div>
             </div>
