--- a/contactpage.html
+++ b/contactpage.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="contactpage(css).css"
         <script src=""></script>
+       
     </head>
     <body>
         <div class="all">
@@ -19,17 +20,32 @@
                         <div class="cnt">CONTACT</div>
                     </div></div>
                     <div class="main">
-                        <div class="get">GET IN</div>
-                        <div class="eyem">
-                        <div class="eye">
-                            <div class="pupil"></div>
+                        <div class="get">
+                            <div class="getin" style=" width: auto;margin-right: 150px;margin-bottom: -10px;">GET IN</div>
                         </div>
-                        <script src="contactjs.js"></script></div>
+                        <div class="eyem">
+                            <div class="chng" style="margin-left: auto;margin-right: 60px;margin-top: -30px;">
+                        <div class="eye">
+                            <div class="pupil"><canvas id="canvas"></canvas></div>
+                        </div>
+                        <script src="contactjs.js"></script></div></div>
                         <!-- <div class="eye">O</div> -->
-                        <div class="tch">TOUCH</div>
+                        <div class="tch">
+                            <div class="tch1>" style="margin-top:-40px;margin-right: 80px;">TOUCH</div></div>
                     </div>  
-                    <div class="mail">mail</div>
-                    <div class="random">ran</div>
+                    <div class="mail">afeefahmed.shaik@gmail.com</div>
+                    <div class="random">
+                        <div class="carer">
+                        We genuinely care about your feedback. Let us know how we can improve
+                    </div>
+                    <div class="social">
+                        <div class="lanks">SOCIAL LINKS</div>
+                        <div class="smst">
+                        <div class="instagram">INSTAGRAM</div>
+                        <div class="github">GITHUB</div>
+                        <div class="linkedin">LINKEDIN</div></div>
+                    </div>
+                    </div>
                 </div>
 
 
