--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="Untitled-1.css">
         <script src="Untitled-12.js"></script>
         
+        
     </head>
 
         <div class="whole" 
@@ -24,8 +25,8 @@
 
                     <a class="about" href="about(html).html">
                     <div class="about" >ABOUT</div></a>
-
-                    <div class="cnt">CONTACT</div>
+                        <a href="contactpage.html" style="color: black;text-decoration: none;">
+                    <div class="cnt">CONTACT</div></a>
                 </div>
             </div>
 
@@ -66,9 +67,10 @@
                             gaining practical experience in Web development.</div> -->
                 </div>
             <div id="content4">
+                <a href="contactpage.html" style="color: black;text-decoration: none;">
                 <div class="txt2"><b>Have Some Questions?</b><p id="str">↗</p></div>
                 <div class="cnt-me">Contact Me</div>
-            </div>
+            </div></a>
             <footer>  <div class="contact"></div>
                 <a class="int" href="https://www.instagram.com/ssd_afeef_/">INSTAGRAM</a>
                 <!-- <img id="int-logo" src="int-logo.png"> -->
