--- a/contactpage.html
+++ b/contactpage.html
@@ -33,7 +33,7 @@
                         <div class="tch">
                             <div class="tch1>" style="margin-top:-40px;margin-right: 80px;">TOUCH</div></div>
                     </div>  
-                    <div class="mail">afeefahmed.shaik@gmail.com</div>
+                    <a href="https://mail.google.com/mail/u/0/#sent?compose=DmwnWsdDxxzWlHsssXsntVlmZLHnFtvWMwzHShKTXlPCXQnqgVxSRkHsdrhMrRSgcXhCDMnCfNkb" style="color: inherit;text-decoration:double;" class="mail">afeefahmed.shaik@gmail.com</a>
                     <div class="random">
                         <div class="carer">
                         We genuinely care about your feedback. Let us know how we can improve
