--- a/contactpage.html
+++ b/contactpage.html
@@ -19,7 +19,7 @@
     
                         <div class="cnt">CONTACT</div>
                     </div></div>
-                    <div class="main" style="background-color: ;">
+                    <div class="main">
                         <div class="get">
                             <div class="getin" style=" width: auto;margin-right: 150px;margin-bottom: -10px;">GET IN</div>
                         </div>
