--- a/contactpage.html
+++ b/contactpage.html
@@ -6,7 +6,10 @@
        
     </head>
     <body>
-        <div class="all">
+        <div class="all"  style="user-select: none; 
+        -webkit-user-select: none; 
+        -moz-user-select: none; 
+        -ms-user-select: none;">
             <div class="navt">
                 <div class="afeef">AFEEF<b>AHMED</b></div>
                 
