--- a/contactpage.html
+++ b/contactpage.html
@@ -11,6 +11,11 @@
         -moz-user-select: none; 
         -ms-user-select: none;">
             <div class="navt">
+                <div class="prev" style="text-decoration: none;">
+                    <a href="#" onclick="history.back()" style="text-decoration: none;">
+                      <div class="prev-btn" style="text-decoration: none;">⫷</div>
+                    </a>
+                  </div>
                 <div class="afeef">AFEEF<b>AHMED</b></div>
                 
                 <div class="three">
