main page changes

--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
             <div id="content3">
                     <div class="tops">
                         <p id="star">✵</p></div>
-                        <!-- <div class="explain">
-                            I am Afeef , currently studying Computer Science And Engineering, 
-                            with a strong interest in web development. I've worked on Personal Projects, 
-                            gaining practical experience in Web development.</div> -->
+                        <div class="explain">
+                            I am a student who enjoys web designing and excels at turning creative ideas into functional websites.
+                             I focus on delivering designs that seamlessly blend aesthetics with optimal user experience.</div>
                 </div>
             <div id="content4">
                 <a href="contactpage.html" style="color: black;text-decoration: none;">
