--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     <div class="tops">
                         <p id="star">✵</p></div>
                         <div class="explain">
-                            I am a student who enjoys web designing and excels at turning creative ideas into functional websites.
-                             I focus on delivering designs that seamlessly blend aesthetics with optimal user experience.</div>
+                            I'm a web design enthusiast skilled in crafting functional, 
+                            user-friendly websites that balance aesthetics with seamless user experience.</div>
                 </div>
             <div id="content4">
                 <a href="contactpage.html" style="color: black;text-decoration: none;">
