--- a/contactpage.html
+++ b/contactpage.html
@@ -38,7 +38,7 @@
                             <div class="tch1>" style="margin-top:-40px;margin-right: 80px;">TOUCH</div></div>
                     </div>  
                     <a href="https://mail.google.com/mail/u/0/#sent?compose=DmwnWsdDxxzWlHsssXsntVlmZLHnFtvWMwzHShKTXlPCXQnqgVxSRkHsdrhMrRSgcXhCDMnCfNkb" style="color: inherit;text-decoration: underline;" class="mail">afeefahmed.shaik@gmail.com</a>
-                    <div class="random">
+                    <div class="random" style="height: 915px;">
                         <div class="carer">
                         We genuinely care about your feedback. Let us know how we can improve
                     </div>
