--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             </main>
             
             <div id="content1" style="background-color: rgba(0, 0, 0, 0);">
-                <img id="head-space" src="Head Space.jpeg">
+                <!-- <img id="head-space" src="Head Space.jpeg"> -->
+                <video id="head-space" src="facw.mp4" autoplay muted loop ></video>
             </div>
             
             <div id="content2">
