--- a/cerrtificates.html
+++ b/cerrtificates.html
@@ -29,6 +29,9 @@
             <div class="item "style="width: 450px;">
                 <img style="width: 100%;height: 320px;border-radius: 10px;" src="6.png">            
             </div>
+            <div class="item "style="width: 450px;">
+                <img style="width: 100%;height: 320px;border-radius: 10px;" src="Screenshot 2024-11-09 002352.png">            
+            </div>
             <div class="item" style="display: flex;justify-content: center;background-color: rgba(58, 58, 58, 0.951);">
                 <h1>Coming soon... </h1>
             </div>
