--- a/cerrtificates.html
+++ b/cerrtificates.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="certificates(css).css">
 </head>
 <body>
+    <button id="backspace" onclick="window.history.go(-2)">← Back</button>
         <div class="slider">
             <div class="item " style="width: 450px;">
                 <img style="width: 99%;height: 300px;border-radius: 10px;" src="4.png">  
