certificate web changes

--- a/contactpage.html
+++ b/contactpage.html
@@ -40,7 +40,7 @@
                     <a href="https://mail.google.com/mail/u/0/#sent?compose=DmwnWsdDxxzWlHsssXsntVlmZLHnFtvWMwzHShKTXlPCXQnqgVxSRkHsdrhMrRSgcXhCDMnCfNkb" style="color: inherit;text-decoration: underline;" class="mail">afeefahmed.shaik@gmail.com</a>
                     <div class="random">
                         <div class="carer">
-                        We genuinely care about your feedback. Let us know how we can improve
+                        We genuinely don't care about your feedback. Let us know how we can improve, we would surely ignore it.
                     </div>
                     <div class="social">
                         <div class="lanks">SOCIAL LINKS</div>
