--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="nlyscr">AFEEF<b>AHMED</b>SHAIK</div>
 
                 <div class="three">
-                    <a class="projects" style="text-decoration: inherit; color: black;" href="about(html).html">
+                    <a class="projects" style="text-decoration: inherit; color: black;" href="https://github.com/ssdafeef?tab=repositories">
                     <div class="projects" >PROJECTS</div></a>     
 
                     <a class="about" href="about(html).html">
