--- a/contactpage.html
+++ b/contactpage.html
@@ -14,7 +14,7 @@
                 <div class="afeef">AFEEF<b>AHMED</b></div>
                 
                 <div class="three">
-                    <a class="projects" style="text-decoration: none; color: black;" href="about(html).html">
+                    <a class="projects" style="text-decoration: none; color: black;" href="https://github.com/ssdafeef?tab=repositories"target="_blank">
                         <div class="projects" >PROJECTS</div></a>     
     
                         <a class="about" href="about(html).html">
