--- a/cerrtificates.html
+++ b/cerrtificates.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <button id="backspace" onclick="window.history.go(-2)">←</button>
+    <button id="backspace1" onclick="window.history.go(-2)">←</button>
+
         <div class="slider">
             <div class="item " style="width: 450px;">
                 <img style="width: 99%;height: 300px;border-radius: 10px;" src="4.png">  
