--- a/cerrtificates.html
+++ b/cerrtificates.html
@@ -13,36 +13,36 @@
     <button id="backspace1" onclick="window.history.go(-2)">←</button>
 
         <div class="slider">
-            <div class="item " style="width: 450px;">
+            <div class="item1 " style="width: 450px;">
                 <img style="width: 99%;height: 300px;border-radius: 10px;" src="4.png">  
               </div>
-            <div class="item" style="width: 450px;">
+            <div class="item1" style="width: 450px;">
                 <img style="width: 100%;height:320px;border-radius: 10px;" src="1.png">
             </div>
-            <div class="item"style="width: 450px;">
+            <div class="item1"style="width: 450px;">
                 <img style="width: 100%;height: 300px;border-radius: 10px;" src="3.png">
 
                             </div>
             
-              <div class="item" style="height: 366px;width: 300px;margin-left: 80px;">
+              <div class="item1" style="height: 366px;width: 300px;margin-left: 80px;">
                 <img style="width: 100%; height:366px;border-radius: 10px;"  src="2.png">
               </div>
-            <div class="item " style="width: 450px;">
+            <div class="item1 " style="width: 450px;">
                 <img style="width: 100%;height: 320px;border-radius: 10px;" src="5.png">         
                </div>
-            <div class="item "style="width: 450px;">
+            <div class="item1 "style="width: 450px;">
                 <img style="width: 100%;height: 320px;border-radius: 10px;" src="6.png">            
             </div>
-            <div class="item "style="width: 450px;">
+            <div class="item1 "style="width: 450px;">
                 <img style="width: 100%;height: 320px;border-radius: 10px;" src="Screenshot 2024-11-09 002352.png">            
             </div>
-            <div class="item" style="display: flex;justify-content: center;background-color: rgba(58, 58, 58, 0.951);">
+            <div class="item1" style="display: flex;justify-content: center;background-color: rgba(58, 58, 58, 0.951);">
                 <h1>Coming soon... </h1>
             </div>
-            <div class="item "style="display: flex;justify-content: center;background-color: rgba(58, 58, 58, 0.951);">
+            <div class="item1 "style="display: flex;justify-content: center;background-color: rgba(58, 58, 58, 0.951);">
                 <h1>Comming soon...</h1>
             </div>
-            <div class="item "style="display: flex;justify-content: center;background-color: rgba(58, 58, 58, 0.951);">
+            <div class="item1 "style="display: flex;justify-content: center;background-color: rgba(58, 58, 58, 0.951);">
                 <h1>Coming soon...</h1>
                 </div>
             <button id="next">⫸</button>
