--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="navt">
                 <div class="afeef">AFEEF<b>AHMED</b></div>
                 <div class="move">SHAIK</div>
-                <div class="nlyscr">AFEEF<b>AHMED</b>SHAIK</div>
+                <div class="nlyscr">AFEEF<b>AHMED</b></div>
 
                 <div class="three">
                     <a class="projects" style="text-decoration: inherit; color: black;" href="https://github.com/ssdafeef?tab=repositories"target="_blank">
